# git-snake-release

./: .gitignore  README.md  pyproject.toml  setup.py
git_snake_release/: deps.py  main.py  pyprojecttoml.py  repo.py
